[gd_scene load_steps=62 format=2]

[ext_resource path="res://objects/colorGuySprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/selector.png" type="Texture" id=2]
[ext_resource path="res://scripts/charBox.gd" type="Script" id=3]
[ext_resource path="res://sounds/mix.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/rowNav.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/colNav.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/error.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/reset.wav" type="AudioStream" id=8]
[ext_resource path="res://scripts/main.gd" type="Script" id=9]
[ext_resource path="res://sprites/backs/sunny.png" type="Texture" id=10]
[ext_resource path="res://objects/dustAnim.tscn" type="PackedScene" id=11]
[ext_resource path="res://sprites/wall.png" type="Texture" id=12]
[ext_resource path="res://sprites/font.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://scripts/CanvasLayer.gd" type="Script" id=14]
[ext_resource path="res://sprites/rowExplosion4.png" type="Texture" id=15]
[ext_resource path="res://objects/swipeDetector.tscn" type="PackedScene" id=16]
[ext_resource path="res://sprites/mixButton.png" type="Texture" id=17]
[ext_resource path="res://sprites/resetButton.png" type="Texture" id=18]
[ext_resource path="res://objects/transAnim.tscn" type="PackedScene" id=19]
[ext_resource path="res://sprites/dollarSymbol.png" type="Texture" id=20]
[ext_resource path="res://sprites/pauseButton.png" type="Texture" id=21]
[ext_resource path="res://sprites/buttonStyleBox.tres" type="StyleBox" id=22]
[ext_resource path="res://sprites/rowExplosion2.png" type="Texture" id=23]
[ext_resource path="res://sprites/rowExplosion1.png" type="Texture" id=24]
[ext_resource path="res://sprites/rowExplosion3.png" type="Texture" id=25]
[ext_resource path="res://sounds/pause.wav" type="AudioStream" id=26]
[ext_resource path="res://sounds/music1.ogg" type="AudioStream" id=27]
[ext_resource path="res://sprites/miniFont.ttf" type="DynamicFontData" id=28]
[ext_resource path="res://sprites/winStar7.png" type="Texture" id=29]
[ext_resource path="res://sprites/winStar9.png" type="Texture" id=30]
[ext_resource path="res://sprites/winStar10.png" type="Texture" id=31]
[ext_resource path="res://sprites/winStar8.png" type="Texture" id=32]
[ext_resource path="res://sprites/winStar6.png" type="Texture" id=33]
[ext_resource path="res://sprites/winStar3.png" type="Texture" id=34]
[ext_resource path="res://sprites/winStar1.png" type="Texture" id=35]
[ext_resource path="res://sprites/winStar2.png" type="Texture" id=36]
[ext_resource path="res://sprites/winStar4.png" type="Texture" id=37]
[ext_resource path="res://sprites/winStar5.png" type="Texture" id=38]
[ext_resource path="res://sprites/miniFont.tres" type="DynamicFont" id=39]
[ext_resource path="res://sounds/gameOver.wav" type="AudioStream" id=40]

[sub_resource type="Animation" id=1]
resource_name = "judDown"
tracks/0/type = "value"
tracks/0/path = NodePath("charBox:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.000135446, 0.000172633 ),
"update": 1,
"values": [ 77, 76.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("columnSelect:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 6.10351e-05, 3.32089e-06 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "judLeft"
tracks/0/type = "value"
tracks/0/path = NodePath("columnSelect:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 6.10351e-05, 3.32089e-06 ),
"update": 0,
"values": [ Vector2( -1, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("charBox:margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 9.7241e-06, 1.11701e-05 ),
"update": 1,
"values": [ 19, 20.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "judRight"
tracks/0/type = "value"
tracks/0/path = NodePath("columnSelect:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 6.10351e-05, 3.32089e-06 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("charBox:margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 9.7241e-06, 1.11701e-05 ),
"update": 1,
"values": [ 21, 20.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "judUp"
tracks/0/type = "value"
tracks/0/path = NodePath("charBox:margin_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 0.000135446, 0.000172633 ),
"update": 1,
"values": [ 75, 76.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("columnSelect:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 6.10351e-05, 3.32089e-06 ),
"update": 0,
"values": [ Vector2( 0, -1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6, 6 )

[sub_resource type="DynamicFont" id=6]
size = 14
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=7]
size = 7
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=8]
size = 7
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 13 )

[sub_resource type="Animation" id=9]
resource_name = "comboShow"
tracks/0/type = "value"
tracks/0/path = NodePath("comboScore:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "gameOver"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("gameOver:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../soundMusic:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
tracks/0/type = "value"
tracks/0/path = NodePath("comboScore:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pauseNode:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("darkenScreen:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("levelCompleteNode:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("gameOver:percent_visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=12]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("pauseNode:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, 1.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("pauseNode:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1.1 ), Vector2( 1, 0 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("levelCompleteNode:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 1.1, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("darkenScreen:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.694118 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("mixButton:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("resetButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Theme" id=15]

[sub_resource type="DynamicFont" id=16]
size = 7
font_data = ExtResource( 13 )

[sub_resource type="CanvasItemMaterial" id=17]
blend_mode = 1

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ null ],
"loop": true,
"name": "empty",
"speed": 5.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 36 ), ExtResource( 34 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 33 ), ExtResource( 29 ), ExtResource( 32 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": false,
"name": "star",
"speed": 12.0
} ]

[sub_resource type="DynamicFont" id=19]
size = 8
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 28 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 24, 4 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ ExtResource( 25 ), ExtResource( 15 ), ExtResource( 23 ), ExtResource( 24 ), null ],
"loop": false,
"name": "explode",
"speed": 12.0
} ]

[node name="Node2D" type="Node2D"]
pause_mode = 1
script = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/judDown = SubResource( 1 )
anims/judLeft = SubResource( 2 )
anims/judRight = SubResource( 3 )
anims/judUp = SubResource( 4 )

[node name="columnSelect" type="Sprite" parent="."]
position = Vector2( 35, 76 )
texture = ExtResource( 2 )
offset = Vector2( 0, 1 )

[node name="charBox" type="VBoxContainer" parent="."]
margin_left = 19.0
margin_top = 77.0
margin_right = 88.0
margin_bottom = 209.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="redGuy" type="Area2D" parent="charBox"]
modulate = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="charBox/redGuy"]
shape = SubResource( 5 )

[node name="colorGuySprite" parent="charBox/redGuy" instance=ExtResource( 1 )]

[node name="dustAnim" parent="charBox/redGuy" instance=ExtResource( 11 )]

[node name="yellowGuy" type="Area2D" parent="charBox"]
modulate = Color( 1, 1, 0, 1 )
position = Vector2( 16, 16 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="charBox/yellowGuy"]
shape = SubResource( 5 )

[node name="colorGuySprite" parent="charBox/yellowGuy" instance=ExtResource( 1 )]

[node name="dustAnim" parent="charBox/yellowGuy" instance=ExtResource( 11 )]

[node name="blueGuy" type="Area2D" parent="charBox"]
modulate = Color( 0, 0.498039, 1, 1 )
position = Vector2( 32, 32 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="charBox/blueGuy"]
shape = SubResource( 5 )

[node name="colorGuySprite" parent="charBox/blueGuy" instance=ExtResource( 1 )]

[node name="dustAnim" parent="charBox/blueGuy" instance=ExtResource( 11 )]

[node name="soundMix" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="soundRow" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="soundCol" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="soundError" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="soundReset" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="spawnTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 35, 17 )
rotating = true
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 14 )

[node name="darkenScreen" type="ColorRect" parent="CanvasLayer"]
margin_left = -0.000717163
margin_right = 143.999
margin_bottom = 256.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="goButton" type="Button" parent="CanvasLayer"]
visible = false
margin_left = 66.0
margin_top = 227.0
margin_right = 138.0
margin_bottom = 247.0
text = "Force GO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mixButton" type="TextureButton" parent="CanvasLayer"]
margin_left = 2.0
margin_top = 212.0
margin_right = 42.0
margin_bottom = 252.0
texture_normal = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resetButton" type="TextureButton" parent="CanvasLayer"]
margin_left = 2.0
margin_top = 176.0
margin_right = 42.0
margin_bottom = 216.0
texture_normal = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="CanvasLayer"]
margin_top = 16.0
margin_right = 144.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="comboScore" type="Label" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 114.0
margin_top = 32.0
margin_right = 138.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 7 )
text = "x2!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="highScore" type="Label" parent="CanvasLayer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 51.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 8 )
text = "high 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameOver" type="Label" parent="CanvasLayer"]
margin_top = 72.0
margin_right = 144.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 8 )
text = "game over!"
align = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="moneyBox" type="HBoxContainer" parent="CanvasLayer"]
margin_left = 98.0
margin_top = 41.0
margin_right = 138.0
margin_bottom = 49.0
custom_constants/separation = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/moneyBox"]
margin_left = 8.0
margin_right = 16.0
margin_bottom = 8.0
texture = ExtResource( 20 )

[node name="moneyScore" type="Label" parent="CanvasLayer/moneyBox"]
margin_left = 16.0
margin_right = 40.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 8 )
text = "100"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pauseButton" type="TextureButton" parent="CanvasLayer"]
margin_left = 120.0
margin_top = 8.0
margin_right = 136.0
margin_bottom = 24.0
texture_normal = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="canvasAnim" type="AnimationPlayer" parent="CanvasLayer"]
pause_mode = 2
autoplay = "idle"
anims/comboShow = SubResource( 9 )
anims/gameOver = SubResource( 10 )
anims/idle = SubResource( 11 )
anims/pause = SubResource( 12 )
anims/unPause = SubResource( 13 )
anims/winScreenShow = SubResource( 14 )

[node name="pauseNode" type="Node2D" parent="CanvasLayer"]
pause_mode = 2
position = Vector2( 72, 95 )
scale = Vector2( 1, 1e-05 )

[node name="pauseMenu" type="VBoxContainer" parent="CanvasLayer/pauseNode"]
margin_left = -60.0
margin_top = -46.0
margin_right = 60.0
margin_bottom = 47.0
theme = SubResource( 15 )
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="returnButton" type="Button" parent="CanvasLayer/pauseNode/pauseMenu"]
margin_top = 12.0
margin_right = 120.0
margin_bottom = 24.0
custom_styles/hover = ExtResource( 22 )
custom_styles/pressed = ExtResource( 22 )
custom_styles/focus = ExtResource( 22 )
custom_styles/disabled = ExtResource( 22 )
custom_styles/normal = ExtResource( 22 )
custom_fonts/font = SubResource( 16 )
text = "continue"

[node name="resetButton" type="Button" parent="CanvasLayer/pauseNode/pauseMenu"]
margin_top = 40.0
margin_right = 120.0
margin_bottom = 52.0
custom_styles/hover = ExtResource( 22 )
custom_styles/pressed = ExtResource( 22 )
custom_styles/focus = ExtResource( 22 )
custom_styles/disabled = ExtResource( 22 )
custom_styles/normal = ExtResource( 22 )
custom_fonts/font = SubResource( 16 )
text = "reset session"

[node name="menuButton" type="Button" parent="CanvasLayer/pauseNode/pauseMenu"]
margin_top = 68.0
margin_right = 120.0
margin_bottom = 80.0
custom_styles/hover = ExtResource( 22 )
custom_styles/pressed = ExtResource( 22 )
custom_styles/focus = ExtResource( 22 )
custom_styles/disabled = ExtResource( 22 )
custom_styles/normal = ExtResource( 22 )
custom_fonts/font = SubResource( 16 )
text = "return to menu"

[node name="levelCompleteNode" type="Node2D" parent="CanvasLayer"]
pause_mode = 2
position = Vector2( 72, 108 )
scale = Vector2( 1e-05, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="border" type="ColorRect" parent="CanvasLayer/levelCompleteNode"]
margin_left = -56.0
margin_top = -76.0
margin_right = 57.0
margin_bottom = 76.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="border2" type="ColorRect" parent="CanvasLayer/levelCompleteNode/border"]
margin_left = 1.0
margin_top = 1.0
margin_right = 112.0
margin_bottom = 151.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="border3" type="ColorRect" parent="CanvasLayer/levelCompleteNode/border/border2"]
margin_left = 1.0
margin_top = 2.0
margin_right = 110.0
margin_bottom = 148.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stars" type="Node2D" parent="CanvasLayer/levelCompleteNode/border/border2/border3"]
position = Vector2( 0, -14 )

[node name="starSprite" type="AnimatedSprite" parent="CanvasLayer/levelCompleteNode/border/border2/border3/stars"]
modulate = Color( 1, 0, 0, 1 )
material = SubResource( 17 )
position = Vector2( 22, 64 )
frames = SubResource( 18 )
animation = "empty"
playing = true

[node name="starSprite2" type="AnimatedSprite" parent="CanvasLayer/levelCompleteNode/border/border2/border3/stars"]
modulate = Color( 1, 1, 0, 1 )
material = SubResource( 17 )
position = Vector2( 54, 60 )
frames = SubResource( 18 )
animation = "empty"
playing = true

[node name="starSprite3" type="AnimatedSprite" parent="CanvasLayer/levelCompleteNode/border/border2/border3/stars"]
modulate = Color( 0, 0.498039, 1, 1 )
material = SubResource( 17 )
position = Vector2( 86, 64 )
frames = SubResource( 18 )
animation = "empty"
playing = true

[node name="header" type="Label" parent="CanvasLayer/levelCompleteNode/border/border2/border3"]
margin_top = 13.0
margin_right = 109.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 19 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "level complete"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continueMenu" type="VBoxContainer" parent="CanvasLayer/levelCompleteNode/border/border2/border3"]
margin_left = 14.0
margin_top = 60.0
margin_right = 94.0
margin_bottom = 153.0
theme = SubResource( 15 )
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restartButton" type="Button" parent="CanvasLayer/levelCompleteNode/border/border2/border3/continueMenu"]
margin_top = 26.0
margin_right = 80.0
margin_bottom = 38.0
custom_styles/hover = ExtResource( 22 )
custom_styles/pressed = ExtResource( 22 )
custom_styles/focus = ExtResource( 22 )
custom_styles/disabled = ExtResource( 22 )
custom_styles/normal = ExtResource( 22 )
custom_fonts/font = ExtResource( 39 )
text = "RESTART LEVEL"

[node name="continueButton" type="Button" parent="CanvasLayer/levelCompleteNode/border/border2/border3/continueMenu"]
margin_top = 54.0
margin_right = 80.0
margin_bottom = 66.0
custom_styles/hover = ExtResource( 22 )
custom_styles/pressed = ExtResource( 22 )
custom_styles/focus = ExtResource( 22 )
custom_styles/disabled = ExtResource( 22 )
custom_styles/normal = ExtResource( 22 )
custom_fonts/font = ExtResource( 39 )
text = "CONTINUE TO MAP"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

[node name="limit" type="StaticBody2D" parent="."]
position = Vector2( 35, 28 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="limit"]
shape = SubResource( 20 )

[node name="Sprite" type="Sprite" parent="limit"]
position = Vector2( 0, -4 )
rotation = 3.14159
texture = ExtResource( 12 )

[node name="upperLimit" type="Area2D" parent="."]
position = Vector2( 35, -100 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="upperLimit"]
shape = SubResource( 20 )

[node name="Sprite" type="Sprite" parent="upperLimit"]
position = Vector2( 0, 4 )
texture = ExtResource( 12 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="back" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 0.496094, 0.496094, 0.496094, 1 )
margin_left = -37.0
margin_top = -111.0
margin_right = 107.0
margin_bottom = 145.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="swipeDetector" parent="." instance=ExtResource( 16 )]

[node name="transAnim" parent="." instance=ExtResource( 19 )]

[node name="explosionSprite" type="AnimatedSprite" parent="."]
position = Vector2( 35, -33 )
frames = SubResource( 21 )
animation = "explode"
frame = 4

[node name="soundPause" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 26 )

[node name="soundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )
volume_db = -3.0
autoplay = true

[node name="gameOverTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="soundGameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 40 )
volume_db = -1.0
[connection signal="pressed" from="CanvasLayer/goButton" to="." method="_on_goButton_pressed"]
[connection signal="pressed" from="CanvasLayer/mixButton" to="charBox" method="_on_mixButton_pressed"]
[connection signal="pressed" from="CanvasLayer/resetButton" to="charBox" method="_on_resetButton_pressed"]
[connection signal="pressed" from="CanvasLayer/pauseButton" to="." method="_on_pauseButton_pressed"]
[connection signal="pressed" from="CanvasLayer/pauseNode/pauseMenu/returnButton" to="." method="_on_returnButton_pressed"]
[connection signal="pressed" from="CanvasLayer/pauseNode/pauseMenu/resetButton" to="." method="_on_resetButton_pressed"]
[connection signal="pressed" from="CanvasLayer/pauseNode/pauseMenu/menuButton" to="." method="_on_menuButton_pressed"]
[connection signal="swiped" from="swipeDetector" to="charBox" method="_on_swipeDetector_swiped"]
[connection signal="tapped" from="swipeDetector" to="charBox" method="_on_swipeDetector_tapped"]
[connection signal="animation_finished" from="transAnim" to="." method="_on_transAnim_animation_finished"]
[connection signal="timeout" from="gameOverTimer" to="." method="_on_gameOverTimer_timeout"]
